--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,13 +6,14 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 29
         targetSdkVersion = 29
+        googlePlayServicesAuthVersion = "16.0.1" // <--- use this version or newer  
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
+        classpath("com.android.tools.build:gradle:4.0.1")
 	      classpath 'com.google.gms:google-services:4.3.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +23,8 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        mavenCentral()
+        
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -34,5 +37,10 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+
+        // ADD THIS
+        maven { 
+          url 'https://maven.google.com' 
+        }
     }
 }
