--- a/package.json
+++ b/package.json
@@ -11,18 +11,30 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.8.1",
     "@react-native-firebase/auth": "^10.8.1",
+    "@react-native-firebase/firestore": "^11.0.0",
+    "@react-native-firebase/storage": "^11.0.0",
+    "@react-native-google-signin/google-signin": "^6.0.0",
+    "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-feather": "^2.0.9",
     "react-native": "0.63.4",
+    "react-native-action-button": "^2.8.5",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.18.1",
+    "react-native-skeleton-placeholder": "^3.0.4",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-webview": "^11.2.3"
+    "react-native-webview": "^11.2.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
