--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-fbsdk": "^3.0.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.1.9",
