--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
+    "react-native-material-menu": "^1.2.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.18.1",
