--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-keyboard-aware-view": "0.0.14",
     "react-native-material-menu": "^1.2.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^2.0.0",
